--- a/style.css
+++ b/style.css
@@ -164,7 +164,11 @@ margin-left: 27.5%;
     text-transform: uppercase;
     font-size: 7.4vw;
     line-height: 7.4vw;
-    text-decoration: underline;
+    
+    /* text-decoration: underline; */
+    border-bottom: .5vw solid white;
+    /* padding-bottom: .5vw; */
+    transition: all ease 1;
 }
 
 
@@ -172,13 +176,17 @@ margin-left: 27.5%;
 .hero h3{
     line-height: 7.3vw;
     text-transform: uppercase;
-    font-size: 8vw;
+    font-size: 7.6vw;
     font-family: plain;
     font-weight: 500;
 }
 .hero h2:hover{
-    -webkit-text-stroke: 1px white;
-    font-weight: 100;
+    -webkit-text-stroke: .1vw white;
+    font-weight: 400;
     color: transparent;
-    text-decoration: none;
+    border: none;
+    border-bottom: .5vw solid rgba(255, 255, 255, 0.011);
+
+    /* transition: all ease 0.1; */
+    /* text-decoration: none; */
 }
