--- a/style.css
+++ b/style.css
@@ -96,13 +96,16 @@ html,body{
     /* position: relative; */
     overflow-x: hidden;
     background-color:#030303 ;
+    /* background-color: #151515 ; */
+
     
 }
 #page1{
-    height: 100vh;
+    height: 110vh;
     background-color: #151515;
     /* background-color: red; */
     width: 100%;
+    /* margin-bottom: %; */
 }
 #nav{
     display: flex;
@@ -172,7 +175,11 @@ html,body{
     margin-left: 27.5%;
     height: fit-content;
 }
-
+#one{
+    margin-bottom: 10vh;
+    width: 100%;
+    /* background-color: red; */
+}
 .hero:nth-child(1)
 {
     margin-top: 10vw;
@@ -214,6 +221,11 @@ margin-left: 27.5%;
     transition: all ease .3s;
     /* text-decoration: none; */
 }
+#hero4 h4{
+    /* margin-bottom: 20vw; */
+    /* padding-bottom: 5vw; */
+    /* height: 10vh; */
+}
 #page2{
     width: 100%;
     height: 100vh;
@@ -221,10 +233,11 @@ margin-left: 27.5%;
     /* padding: 4vw 0 4vw 4vw; */
 padding-top:6vw ;
     position: relative;
+    /* margin-top: 8vw; */
     /* display: flex; */
     /* justify-content: end; */
     /* align-items: center; */
-overflow-x: hidden;
+/* overflow-x: hidden; */
 }
 #vidContain{
     height: 70vh;
