--- a/style.css
+++ b/style.css
@@ -261,8 +261,8 @@ padding-top:6vw ;
     /* object-fit: cover; */
 }
 #vidContain video{
-    height: 100%;
-    width: 100%;
+    height: 98%;
+    width: 98%;
     z-index: 2;
     object-fit: cover;
 }
@@ -273,11 +273,14 @@ padding-top:6vw ;
     background-color: #FFA63D;
     position: absolute;
     top: -8%;
-    right: 18%;
+    left: 72%;
     z-index: 998;
+    /* transform: translate(-50%,-50%); */
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all ease 1.2s;
+    transition-delay: -.5s;
 }
 #vidCursor i{
     font-size: 2.5vw;
