--- a/style.css
+++ b/style.css
@@ -8,9 +8,14 @@ html,body{
  width: 100%;
  color: white;
  /* background-color: #151515; */
+    /* cursor: "hidden"; */
 
  /* background-color: red; */
  /* overflow-x: hidden; */
+}
+body{
+    cursor: "none";
+
 }
 @font-face {
     font-family: plain;
@@ -28,6 +33,7 @@ html,body{
     font-family: silk serif;
     src: url("fonts/ilkserif-lightitalic-webfont.ttf");
 }
+
 #cursor{
     height: 2.8vw;
     width: 2.8vw;
@@ -37,8 +43,10 @@ html,body{
     /* background-color: red; */
     position: absolute;
     mix-blend-mode: difference;
-    z-index: 999;
-    transform: translate(-50%, -50%)
+    z-index: 2;
+    /* z-index: 400; */
+    transform: translate(-50%,-50%);
+    pointer-events: none;
 }
 #loader{
     height: 100%;
@@ -108,6 +116,7 @@ html,body{
 
     
 }
+
 #page1{
     height: 110vh;
     background-color: #151515;
@@ -125,28 +134,35 @@ html,body{
     /* background-color: rebeccapurple; */
     position: relative;
 }
+#nav #nav1{
+    /* background-color: red; */
+    width: 20%;
+    height: 100%;
+    /* align-items: start; */
+    /* background-color: red; */
+    background-color: transparent;
+}
+.menu-opener__square{
+    position: absolute;
+    top: 69%;
+    left: 5.5%;
+    transform: translate(-50%,-50%);
+}
 .brand__svg{
     position: absolute;
     top: 69%;
     left: 10.8%;
     transform: translate(-50%,-50%);
 }
-#nav #nav1{
-    /* background-color: red; */
-    width: 20%;
-    height: 100%;
-    /* background-color: red; */
-    background-color: transparent;
-}
 #nav #nav2{
     /* background-color: red; */
     display: flex;
-    gap: 2.5vw;
-    /* background-color: red; */
+    /* gap: 2.5vw; */
+    background-color: red;
     /* height: 100%; */
-    width: 20vw;
-    height: 5vw;
-    justify-content: end;
+    width: 20%;
+    height: 100%;
+    justify-content: space-between;
     align-items: center;
 }
 #nav2>h4{
@@ -237,7 +253,7 @@ margin-left: 27.5%;
     height: 22vw;
     z-index: 998;
     transform: translate(-50%,-50%);
-    /* opacity: 1; */
+    opacity: 0;
     top: 0;
     left: 0;
 }
@@ -295,7 +311,7 @@ padding-top:6vw ;
     width: 100%;
     /* background-color: #FFA63D; */
     background-color: #151515;
-    padding: 6vw 3vw;
+    padding: 6vw 3vw  6vw 3vw;
 }
 #OurProjects{
     /* height: 100vh; */
@@ -304,6 +320,7 @@ padding-top:6vw ;
     background-color: #151515;
     /* overflow-x: hidden; */
     padding-top: 2vw;
+    padding-right: 6vw;
 }
 #OurProjects h1{
     letter-spacing: -.1vw;
@@ -314,6 +331,7 @@ padding-top:6vw ;
     font-family: plain;
     position: relative;
 }
+
 #OurProjects h1::before{
     content: "02";
     position: absolute;
@@ -336,6 +354,7 @@ padding-top:6vw ;
     background-color: #151515;
     /* overflow-x: hidden; */
     padding-top: 2vw;
+    padding-right: 6vw;
 }
 #about h1{
     font-weight: 500;
@@ -534,6 +553,13 @@ padding-top:6vw ;
     margin-left: 28%;
     padding: 2vw 6vw 0 0;
  }
+ #footer-head{
+    display: flex;
+    align-items: center;
+    margin-right: 4vw;
+    position: relative;
+    /* overflow: hidden; */
+ }
  #footer-head h1{
     font-size: 7.3vw;
     font-family: plain ;
@@ -542,14 +568,35 @@ padding-top:6vw ;
     font-weight: 500;
     position: relative;
  }
+ #footer-head h2 {
+    font-size: 7.2vw;
+    text-transform: uppercase;
+    position: absolute;
+    top: -10%;
+    font-weight: 500;
+    left: 0;
+    font-family: "silk serif";
+}
+
+ #footer-head h2 span {
+    font-family: "silk serif";
+    opacity: 0;
+    -webkit-text-stroke: 1px #fff;
+    color: transparent;
+}
  #footer-head h1::before{
     content: "04";
     position: absolute;
     font-size: 3.3vw;
     font-family: silk;
     top: 9%;
-    left: -15%;
+    left: -22%;
  }
+ .footer-arrow{
+    height: 6vw;
+    rotate: -90deg;
+    margin-left: 4vw;
+}
 
  #footer>.underline{
     margin-bottom: 2.1vw;
@@ -726,13 +773,12 @@ padding-top:6vw ;
     position: relative;
     overflow: hidden;
     margin-top: 23.6vw;
-    margin-left: 8.2vw;
+    margin-left: 7.2vw;
     transition: all ease 0.3s;
 
 }
 #circle-div1 svg{
     height: 7.5vw;
-    
 }
 #circle-div2{
     position: relative;
@@ -901,3 +947,5 @@ padding-top:6vw ;
     font-family: silk;
     font-weight: 400;
 }
+
+
